added more test cases to scenarios